// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tag matches snapshot correctly 1`] = `
<div
  class="brd-c-hyxzAo brd-c-hyxzAo-jhuSHf-size-md brd-c-hyxzAo-kNKPai-color-primary"
>
  test
</div>
`;

exports[`tagGroup matches snapshot correctly 1`] = `
<div
  class="brd-c-hyxzAo brd-c-hyxzAo-euzDcH-size-lg brd-c-hyxzAo-kNKPai-color-primary"
>
  Abc
</div>
`;
